# PureShinshi

./: .gitignore  pyproject.toml
_music/: join.py  play.py
src/: __init__.py  __main__.py
src/bot/: lavalink.py  model.py
src/data/: config.yaml
src/ext/: api.py  data.py  embeds.py
src/ext/checks/: __init__.py  has_permissions.py  localized_permissions.py
src/extensions/modules/general/: about.py  invite.py  member.py  support.py  user.py  whois.py
src/extensions/modules/moderation/: ban.py  kick.py
src/extensions/modules/roleplay/: bite.py  bonk.py  hug.py  kiss.py  lick.py  nom.py  pat.py  punch.py
src/extensions/modules/utilities/: calculate.py  weather.py
